--- a/vignettes/Development/TestingMassBalance.Rmd
+++ b/vignettes/Development/TestingMassBalance.Rmd
@@ -24,9 +24,11 @@ library(dplyr)
 library(readr)
 library(tidyr)
 library(stringr)
+World$fetchData("kdegDorC")
 
-emissions <- data.frame(Abbr = "w1CU", 
-                        Emis = 35)
+
+emissions <- data.frame(Abbr = "s1CU", 
+                        Emis = 3)
 emissions$Emis<- emissions$Emis * 1000 / (365.25 * 24 * 60 * 60) # convert 1 t/y to si units: kg/s
 ```
 
@@ -199,7 +201,7 @@ for (substance in substances) {
     emission_rows <- unique_combinations |>
       mutate(
         Value = "emission",
-        EqMass = if_else(Scale == "Continental" & SubCompart == "river" & Species == "Solid", emissions$Emis, 0)
+        EqMass = if_else(Scale == "Continental" & SubCompart == "sea" & Species == "Unbound", emissions$Emis, 0)
       )
     
     # Adding "from" and "to" acronyms to the R K matrix
@@ -431,7 +433,7 @@ process_substance <- function(data, substance_name) {
       y = "k [k*EqMass]"
     ) +
     theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
-   geom_text(aes(label = paste("Difference:", round(difference, 2))), 
+   geom_text(aes(label = paste("Difference:", round(difference, 6))), 
               x = 1, y = max(filtered_data$k) * 0.8, 
               hjust = 0, vjust = 0, color = "black", size = 3.5)
   
@@ -508,29 +510,25 @@ total_abs_differences <- data.frame(VaporPressure = numeric(), TotalAbsDifferenc
 top_rows_list <- list()
 total_mass_difference_list <- list()
 kaas_filtered_list <- list()
-
-  # Replace with actual emissions data or parameters
-
 # Fetch Pvap25 data from World
 World$fetchData("Pvap25")
 
 # Generate a log scale sequence for vapor pressures
-log_seq <- seq(from = log10(1e-20), to = log10(1e-5), length.out = 10)
+log_seq <- seq(from = log10(1e-20), to = log10(1e-1), length.out = 10)
 
 # Convert the log scale sequence back to the original scale
-Pvap25_range <- 10^log_seq
+pvap_range <- 10^log_seq
 
-# Print the sequence to verify
-print(Pvap25_range)
+
 
 # Loop over vapor pressures
-for (vap in Pvap25_range) {
+for (vap in pvap_range) {
   cat("Processing mass balance for vapor pressure:", vap, "\n")
 
   # Set the constant vapor pressure
   World$SetConst(Pvap25 = vap)
   World$UpdateKaas(mergeExisting = FALSE)
-  World$NewSolver("SBsteady")
+  World$NewSolver("SB1Solve")
   World$Solve(emissions)
   SolutionSteady <-World$Solve(emissions)
   SolutionSteady2 <- as.data.frame(SolutionSteady)
@@ -647,28 +645,180 @@ print(top_rows_all)
 library(ggplot2)
 ggplot(total_abs_differences, aes(x = as.factor(VaporPressure), y = TotalAbsDifference)) +
   geom_bar(stat = "identity", position = "dodge") +
-  labs(title = "Total Absolute Differences by Vapor Pressure", x = "Vapor Pressure", y = "Total Absolute Difference [kg]") +
+  labs(title = "Total Absolute Differences by Vapor Pressure for SBSolve", x = "Vapor Pressure", y = "Total Absolute Difference [kg]") +
   theme_minimal()
 
-# Plotting the mass balance differences
-ggplot(massbalance_difference_all, aes(x = interaction(Scale, SubCompart, Species), y = difference, fill = as.factor(VaporPressure))) +
-  geom_bar(stat = "identity", position = "dodge") +
-  labs(title = "Mass Balance Differences by Scale, SubCompart, and Species", x = "Combination (Scale, SubCompart, Species)", y = "Difference Mass Balance [kg]") +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
-  theme_minimal()
 
-top_rows_all$VaporPressure <- factor(top_rows_all$VaporPressure, levels = unique(top_rows_all$VaporPressure))
-
-# Plotting the top differences as grouped bars with facets for vapor pressures
-ggplot(top_rows_all, aes(x = interaction(SubCompart, Scale, Species), y = difference, fill = as.factor(VaporPressure))) +
-  geom_bar(stat = "identity", position = "dodge", width = 0.4) +
-  labs(title = "Top Differences by Compartment, Scale, and Species", x = "Combination (Compartment, Scale, Species)", y = "Difference Mass Balance [kg]", fill = "Vapor Pressure") +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
-  facet_wrap(~ VaporPressure, scales = "free", ncol = 2)
 
 
 ```
 
+```{r mutate var for kdeg}
+Substance <- "Zn(II)"
+source("baseScripts/initWorld_onlyMolec.R")
+emissions <- data.frame(Abbr = "w1CU", 
+                        Emis = 35)
+# Initialize lists and data frames
+mass_balance_results <- list()
+total_abs_differences <- data.frame(Degradation = numeric(), TotalAbsDifference = numeric(), stringsAsFactors = FALSE)
+top_rows_list <- list()
+total_mass_difference_list <- list()
+kaas_filtered_list <- list()
+
+# Generate a log scale sequence for degradation rates
+log_seq <- seq(from = log10(1e-20), to = log10(1e-1), length.out = 10)
+
+# Convert the log scale sequence back to the original scale
+kdeg_range <- 10^log_seq
+print(kdeg_range)
+
+World$fetchData("Substance")
+# Loop over vapor pressures
+for (vap in kdeg_range) {
+  cat("Processing mass balance degradation:", vap, "\n")
+  World$SetConst(Substance = "Closantel")
+  print(World$fetchData("Substance"))
+  # Set the constant vapor pressure
+  kdeg <- data.frame(
+  SubCompart = c("agriculturalsoil", "air", "cloudwater", "deepocean", 
+                 "freshwatersediment", "lake", "lakesediment", 
+                 "marinesediment", "naturalsoil", "othersoil", 
+                 "river", "sea"),
+  kdeg = rep(vap, 12)  # Assuming kdeg values are all 1e-20 as per your example
+)
+
+  ToPaste <- lapply(list(kdeg), function(x) {
+    varName <- names(x)[!names(x) %in% The3D]
+    stopifnot(length(varName)==1)
+    # one line with 2 disadvantages of tidyverse..:
+    as.data.frame(pivot_longer(data = x, cols = all_of(varName), names_to = "varName", values_to = "Waarde"))
+  })
+  
+  dfs <- do.call(bind_rows, ToPaste)
+  print(World$fetchData("Substance"))
+  World$mutateVars(dfs)
+  World$UpdateKaas(mergeExisting = FALSE)
+  World$NewSolver("SBsteady")
+  World$Solve(emissions)
+  SolutionSteady <-World$Solve(emissions)
+  SolutionSteady2 <- as.data.frame(SolutionSteady)
+  
+
+  # Create unique combinations
+  unique_combinations <- SolutionSteady2 |>
+    select(Scale, SubCompart, Species) |>
+    distinct()
+
+  # Create emission rows
+  emission_rows <- unique_combinations |>
+    mutate(
+      Value = "emission",
+      EqMass = if_else(Scale == "Continental" & SubCompart == "river" & Species == "Solid", emissions$Emis, 0)
+    )
+
+  # Adding "from" and "to" acronyms to the R K matrix
+  kaas <- as_tibble(World$kaas)
+  kaas <- kaas |>
+    left_join(SolutionSteady, by = c("fromScale" = "Scale", "fromSubCompart" = "SubCompart", "fromSpecies" = "Species"))
+
+  # Multiply k by the corresponding EqMass
+  kaas <- kaas |>
+    mutate(k = k * EqMass)
+  kaas <- kaas |>
+    mutate(k = if_else(fromSubCompart == toSubCompart &
+                         fromScale == toScale &
+                         fromSpecies == toSpecies,
+                       -abs(k),
+                       k))
+
+  # Save kaas rows for certain subcompartments 
+  kaas_filtered <- kaas |>
+    filter((fromScale == "Tropic" & fromSubCompart == "deepocean" & fromSpecies == "Unbound") |
+           (toScale == "Tropic" & toSubCompart == "deepocean" & toSpecies == "Unbound"))
+
+  # Aggregate k values based on toScale, toSubCompart, and toSpecies
+  aggregated_to <- kaas |>
+    group_by(toScale, toSubCompart, toSpecies) |>
+    summarise(k_sum_to = sum(k)) |>
+    ungroup()
+
+  # Aggregate k values based on fromScale, fromSubCompart, and fromSpecies
+  aggregated_from <- kaas |>
+    filter(k >= 0) |>
+    group_by(fromScale, fromSubCompart, fromSpecies) |>
+    summarise(k_sum_from = sum(k)) |>
+    ungroup()
+
+  new_rows_from <- aggregated_from |>
+    mutate(
+      Value = "transportfrom",
+      Scale = fromScale,
+      SubCompart = fromSubCompart,
+      Species = fromSpecies,
+      EqMass = k_sum_from
+    ) |>
+    select(Value, Scale, SubCompart, Species, EqMass)
+
+  new_rows_to <- aggregated_to |>
+    mutate(
+      Value = "transportto",
+      Scale = toScale,
+      SubCompart = toSubCompart,
+      Species = toSpecies,
+      EqMass = k_sum_to
+    ) |>
+    select(Value, Scale, SubCompart, Species, EqMass)
+
+  # Combine SolutionSteady with new rows
+  massbalancecheck <- bind_rows(new_rows_from, new_rows_to, emission_rows)
+
+  massbalancecheck_sorted <- massbalancecheck |>
+    arrange(Scale, SubCompart, Species)
+
+  # Check differences
+  massbalance_difference <- massbalancecheck_sorted |>
+    pivot_wider(names_from = Value, values_from = EqMass) |>
+    mutate(difference = transportto + emission - transportfrom) |>
+    select(Scale, SubCompart, Species, difference)
+
+  total_abs_difference <- sum(abs(massbalance_difference$difference), na.rm = TRUE)
+  total_mass_difference <- sum(massbalance_difference$difference, na.rm = TRUE)
+
+  # Add columns for vapor pressure
+  massbalance_difference$Degradation <- vap
+  kaas_filtered$Degradation <- vap
+
+  # Print largest differences
+  top_5_rows <- massbalance_difference |>
+    arrange(desc(abs(difference))) |>
+    head(5)
+
+  # Append the results to the lists
+  key <- as.character(vap)
+  mass_balance_results[[key]] <- massbalance_difference
+  total_abs_differences <- rbind(total_abs_differences, data.frame(Degradation = vap, TotalAbsDifference = total_abs_difference))
+  top_rows_list[[key]] <- top_5_rows
+  total_mass_difference_list[[key]] <- total_mass_difference
+  kaas_filtered_list[[key]] <- kaas_filtered
+
+}  # End of vapor pressure loop
+
+# Combine all mass balance results into a single dataframe
+massbalance_difference_all <- do.call(rbind, mass_balance_results)
+top_rows_all <- do.call(rbind, top_rows_list)
+kaas_filtered_all <- do.call(rbind, kaas_filtered_list)
+
+# Print the combined results (optional)
+print(massbalance_difference_all)
+print(top_rows_all)
+
+library(ggplot2)
+ggplot(total_abs_differences, aes(x = as.factor(Degradation), y = TotalAbsDifference)) +
+  geom_bar(stat = "identity", position = "dodge")
+  labs(title = "Total Absolute Differences by degradation for SBSolve", x = "Degradation rate", y = "Total Absolute Difference [kg]") +theme_minimal()
 
 
+
+```
+
+```{r mutate var}
